# shared-ledger-system

./: .env  README.md  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: b5f7fc7c89b7_create_ledger_entries_table.py
monorepo/: main.py
monorepo/core/: config.py
monorepo/core/db/: database.py  ledger_repository.py  models.py
monorepo/core/ledgers/: enums.py  schemas.py
monorepo/core/ledgers/services/: base_ledger_service.py
monorepo/healthai/: alembic.ini
monorepo/healthai/healtai_alembic/: env.py
monorepo/healthai/healtai_alembic/versions/: a69361f70751_create_healthai_ledger_model.py
monorepo/healthai/healthai_alembic/: env.py
monorepo/healthai/healthai_alembic/versions/: b7454fa72252_initial_migration.py  f955b8b291e1_add_healthai_ledger_entry_model.py
monorepo/healthai/src/api/ledgers/: models.py  router.py  schemas.py
monorepo/tests/: conftest.py
monorepo/tests/healthai/: test_healthai.py
monorepo/tests/travelai/: test_travelai.py
monorepo/travelai/: alembic.ini
monorepo/travelai/src/api/ledgers/: models.py  router.py  schemas.py
monorepo/travelai/travelai_alembic/: env.py
monorepo/travelai/travelai_alembic/versions/: 11ec9630ee04_create_travelai_ledger_model.py  ace808053d85_initial_migration.py
src/healthai/src/api/ledgers/: models.py  router.py  schemas.py
src/monorepo/core/db/: ledger_repository.py  models.py
src/monorepo/core/ledgers/: enums.py  schemas.py
src/monorepo/core/ledgers/services/: base_ledger_service.py
src/travelai/src/api/ledgers/: models.py  router.py  schemas.py
